backend-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: backend-java
  name: backend-java
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend-java
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: backend-java
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: prod
          image: goldflow/aquarag-backend-java:latest
          name: backend-java
          ports:
            - containerPort: 9000
              protocol: TCP
      restartPolicy: Always
