backend-python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: backend-python
  name: backend-python
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend-python
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: backend-python
    spec:
      containers:
        - env:
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: aquarag-secrets
                  key: aws-id
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: aquarag-secrets
                  key: aws-key
            - name: GOOGLE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: aquarag-secrets
                  key: google-key
            - name: PINECONE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: aquarag-secrets
                  key: pinecone-key
            - name: JWT_SECRET
              valueFrom:
                secretKeyRef:
                  name: aquarag-secrets
                  key: jwt-sec
            - name: AWS_REGION
              value: us-east-2
            - name: AWS_S3_BUCKET
              value: aqua-rag-135808918878-us-east-2-an
            - name: PINECONE_INDEX_NAME
              value: aqua-rag
            - name: RABBITMQ_HOST
              value: rabbitmq
          image: goldflow/aquarag-backend-python:latest
          imagePullPolicy: IfNotPresent
          name: backend-python
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
