backend-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: backend-java
  name: backend-java
spec:
  type: LoadBalancer # 💡 核心修改：让本地电脑的浏览器能跨域戳到 9000 端口
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: backend-java
