aquarag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aquarag-ingress
  annotations:
    # 🟢 终极修复 1：利用 Nginx Ingress 强大的重写机制，转发时把 /api/rag/ 自动扣掉，精准对齐 Python 内部的路由！
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    
    # 🟢 终极修复 2：强行废掉网关数据缓存，让 AI 的流式打字机和异步通知（SSE）无阻拦喷射
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: localhost
      http:
        paths:
          # 1. 前端静态页面路由（不重写，直接转发 80）
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # 2. Java 认证服务路由
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-java
                port:
                  number: 9000

          # 3. 💡 绝杀：Python 异步 SSE 长连接与 RAG 算法接口的统一对齐通道
          # 它会自动把前面的 /api/rag 剥离，把干净的请求送进 Python 容器
          - path: /api/rag(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-python
                port:
                  number: 8000
